--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -49,17 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\n",
-      "../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\n",
-      "../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\n",
-      "../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\n"
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\n",
+      "[0.131, 0.087, 0.0655, 0.174]\n"
      ]
     }
    ],
@@ -70,22 +71,25 @@
     "#                \"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2491945018_w.fit\",\n",
     "#                  \"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2491947926_p.fit\"]  # すべての画像ファイルを含むリスト\n",
     "\n",
-    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\",\n",
-    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\",\n",
-    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\",\n",
-    "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]\n",
+    "image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\",\n",
+    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\",\n",
+    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\",\n",
+    "                 \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]\n",
     "\n",
     "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\"]\n",
     "\n",
-    "image_files = [\"../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\",\n",
-    "               \"../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\",\n",
-    "               \"../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\",\n",
-    "               \"../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\"]\n",
+    "# image_files = [\"../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\",\n",
+    "#                \"../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\",\n",
+    "#                \"../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\",\n",
+    "#                \"../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\"]\n",
     "\n",
-    "\n",
+    "# image_files = [\"../preprocess/test/before_ref/cor1_st_2489428266_b.fit\",\n",
+    "#                \"../preprocess//test/before_ref/cor1_st_2489432123_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/cor1_st_2489436012_w.fit\",\n",
+    "#                \"../preprocess/test/before_ref/cor1_st_2489439885_p.fit\"]\n",
     "\n",
     "# 出力ディレクトリとファイル名のプレフィックスを指定\n",
     "home_dir = os.path.expanduser(\"~\")\n",
@@ -98,13 +102,19 @@
     "header = hdu.header\n",
     "\n",
     "name_prefix = []\n",
+    "# for i,name in enumerate(image_files):\n",
+    "#     parts = name.split(\".f\")\n",
+    "#     part = parts[0].split(\"/test/\")\n",
+    "#     par = part[1].split(\"_ref/\")\n",
+    "#     p = f\"{par[1]}_reg_\"\n",
+    "#     name_prefix.append(p)\n",
+    "\n",
     "for i,name in enumerate(image_files):\n",
     "    parts = name.split(\".f\")\n",
-    "    part = parts[0].split(\"/test/\")\n",
-    "    par = part[1].split(\"_ref/\")\n",
+    "    part = parts[0].split(\"/data/\")\n",
+    "    par = part[1].split(\"/st\")\n",
     "    p = f\"{par[1]}_reg_\"\n",
     "    name_prefix.append(p)\n",
-    "\n",
     "# name = image_files[0]\n",
     "# parts = name.split(\".f\")\n",
     "# part = parts[0].split(\"/data/\")\n",
@@ -118,20 +128,26 @@
     "float_images = []\n",
     "f = []\n",
     "images_uint16 = []\n",
+    "t = []\n",
     "for i,filename in enumerate(image_files):\n",
     "    print(filename)\n",
     "    images_uint16.append(image_conv(filename))\n",
     "    f.append(fits.getdata(filename))\n",
+    "    hdu = fits.open(filename)[0]\n",
+    "    t.append(hdu.header[\"EXP_0\"])\n",
+    "    # t.append(hdu.header[\"TEXP\"])\n",
     "    a,b = min_max(f[i], f[i].shape[1], f[i].shape[0])\n",
     "    if i == 2:\n",
     "      reference_image = np.uint8(b)\n",
     "    images.append(np.uint8(b))\n",
-    "    float_images.append(a)\n"
+    "    float_images.append(a)\n",
+    "  \n",
+    "print(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +188,10 @@
     "    output_jpgname = f\"{output_directory}{name_prefix[i]}.png\"\n",
     "    output_filename = f\"{output_directory}{name_prefix[i]}.fits\"\n",
     "    cv2.imwrite(output_jpgname, registered_png)\n",
-    "    fits.writeto(output_filename, registered_images[i], overwrite=True)\n",
+    "    hdu = fits.PrimaryHDU(registered_images[i])\n",
+    "    hdu.header['TEXP']=t[i]\n",
+    "    hdulist = fits.HDUList([hdu])\n",
+    "    hdulist.writeto(output_filename, overwrite=True)\n",
     "\n"
    ]
   },
