--- a/test_fufoc.ipynb
+++ b/test_fufoc.ipynb
@@ -243,6 +243,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "fig, ax = plt.subplots()\n",
+    "r = np.logspace(-1, 3, num=1000)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(10**(-1), 10**3)\n",
+    "ax.set_yscale('log')\n",
+    "ax.yaxis.tick_right()\n",
+    "ax.set_ylim(10**(-9), 1)\n",
+    "ax.yaxis.set_major_locator(mpl.ticker.LogLocator(numticks=13))\n",
+    "ax.yaxis.set_minor_locator(mpl.ticker.LogLocator(numticks = 13, subs = (.1, .2, .3, .4, .5, .6, .7, .8, .9)))\n",
+    "for i,f in enumerate(filter):\n",
+    "    print(i, f)\n",
+    "    r, result = get_r_and_psf(Ai, alpha, f)\n",
+    "    ax.plot(r, result,linestyle=styles[i],label = f)\n",
+    "plt.legend(loc = 'upper right') \n",
+    "plt.savefig(\"psf.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [
