--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\n",
+      "../preprocess/test/before_ref/cor1_st_2451086681_b.fit\n",
+      "../preprocess//test/before_ref/cor1_st_2451090553_v.fit\n",
+      "../preprocess/test/before_ref/cor1_st_2451094410_w.fit\n",
+      "../preprocess/test/before_ref/cor1_st_2451098282_p.fit\n",
       "[0.131, 0.087, 0.0655, 0.174]\n"
      ]
     }
@@ -71,10 +71,17 @@
     "#                \"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2491945018_w.fit\",\n",
     "#                  \"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2491947926_p.fit\"]  # すべての画像ファイルを含むリスト\n",
     "\n",
-    "image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\",\n",
-    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\",\n",
-    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\",\n",
-    "                 \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]\n",
+    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489432123_v.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\",\n",
+    "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]        #test\n",
+    "\n",
+    "\n",
+    "image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450510529_b.fit\",\n",
+    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450514369_v.fit\",\n",
+    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450518275_w.fit\",\n",
+    "                 \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450529877_p.fit\"]  #ishiguro2010\n",
+    "\n",
     "\n",
     "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\",\n",
@@ -91,6 +98,11 @@
     "#                \"../preprocess/test/before_ref/cor1_st_2489436012_w.fit\",\n",
     "#                \"../preprocess/test/before_ref/cor1_st_2489439885_p.fit\"]\n",
     "\n",
+    "image_files = [\"../preprocess/test/before_ref/cor1_st_2451086681_b.fit\",\n",
+    "               \"../preprocess//test/before_ref/cor1_st_2451090553_v.fit\",\n",
+    "               \"../preprocess/test/before_ref/cor1_st_2451094410_w.fit\",\n",
+    "               \"../preprocess/test/before_ref/cor1_st_2451098282_p.fit\"]\n",
+    "\n",
     "# 出力ディレクトリとファイル名のプレフィックスを指定\n",
     "home_dir = os.path.expanduser(\"~\")\n",
     "output_directory = os.path.join(home_dir, \"Documents/after_graduate2/output_directory_op/\")\n",
@@ -102,19 +114,19 @@
     "header = hdu.header\n",
     "\n",
     "name_prefix = []\n",
-    "# for i,name in enumerate(image_files):\n",
-    "#     parts = name.split(\".f\")\n",
-    "#     part = parts[0].split(\"/test/\")\n",
-    "#     par = part[1].split(\"_ref/\")\n",
-    "#     p = f\"{par[1]}_reg_\"\n",
-    "#     name_prefix.append(p)\n",
-    "\n",
     "for i,name in enumerate(image_files):\n",
     "    parts = name.split(\".f\")\n",
-    "    part = parts[0].split(\"/data/\")\n",
-    "    par = part[1].split(\"/st\")\n",
+    "    part = parts[0].split(\"/test/\")\n",
+    "    par = part[1].split(\"_ref/\")\n",
     "    p = f\"{par[1]}_reg_\"\n",
     "    name_prefix.append(p)\n",
+    "\n",
+    "# for i,name in enumerate(image_files):\n",
+    "#     parts = name.split(\".f\")\n",
+    "#     part = parts[0].split(\"/data/\")\n",
+    "#     par = part[1].split(\"/st\")\n",
+    "#     p = f\"{par[1]}_reg_\"\n",
+    "#     name_prefix.append(p)\n",
     "# name = image_files[0]\n",
     "# parts = name.split(\".f\")\n",
     "# part = parts[0].split(\"/data/\")\n",
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
