--- a/test_fufoc.ipynb
+++ b/test_fufoc.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from astropy.io import fits\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mlp\n",
     "import pandas as pd"
    ]
   },
